# pyigl-viewer

./: .gitignore  CMakeLists.txt  README.md  setup.py
py/: bindings.cpp  bindings.h  imgui.cpp  pyviewer.cpp
py/pyviewer/: __init__.py
pyviewer/: __init__.py
src/: FormHelper.cpp  FormHelper.h  PyViewer.cpp  PyViewer.h  colormap.cpp  colormap.cpp.autosave  colormap.h  imgui_colorbar.cpp  imgui_colorbar.h  imgui_ext.cpp  imgui_ext.h  imgui_helper.cpp  imgui_helper.h  py_bindings.cpp  py_imgui.cpp  py_viewer.cpp  viewer.cpp  viewer.h
